# middleware_dbus_amba_eventsservice

./: CMakeLists.txt  README.md
ai/include/: AIServiceProxy.h  AIServiceStub.h  IAIServiceListener.h
ai/include/common/: AIConfig.h
ai/source/: AIServiceProxy.cpp  AIServiceStub.cpp
common/: CMakeLists.txt
common/include/: ErrorCode.h  JsonUtility.h  ResultType.h  ShellUtility.h  popen_noshell.h
common/source/: JsonUtility.cpp  ShellUtility.cpp  popen_noshell.cpp
events/: CMakeLists.txt
events/docs/: testcommand.md
events/source/: EventsConfig.h  EventsRepository.cpp  EventsRepository.h  EventsService.cpp  EventsService.h  EventsServiceProxy.cpp  EventsServiceProxy.h  EventsServiceStub.cpp  EventsServiceStub.h  IEventsDataSource.h  IEventsService.h  IEventsServiceListener.h  LocalDataSource.cpp  LocalDataSource.h  Main.cpp
recording/include/: IRecordingService.h  IRecordingServiceListener.h  RecordingManager.h  RecordingService.h  RecordingServiceProxy.h  RecordingServiceStub.h
recording/source/: RecordingServiceProxy.cpp  RecordingServiceStub.cpp
system/include/: SystemCommon.h  SystemServiceProxy.h  SystemServiceStub.h
system/include/ai/: AIService.h  IAIService.h  IAIServiceListener.h
system/include/battery/: BatteryManager.h  BatteryService.h  BatteryServiceProxy.h  IBatteryService.h
system/include/common/: SystemConfig.h
system/include/controller/: ControllerManager.h  ControllerService.h  ControllerServiceProxy.h  IControllerService.h  IControllerServiceListener.h  LedManagerShow.h
system/include/controller/libmcu_i2c_protocol/: libmcu_i2c_protocol.h
system/include/controller/status_led/: drv_everlight.h
system/include/misc/: IMISCService.h  IMISCServiceListener.h  MISCManager.h  MISCService.h  MISCServiceProxy.h
system/include/storage/: IStorageService.h  IStorageServiceListener.h  OryxStorageManager.h  StorageManager.h  StorageService.h  StorageServiceProxy.h
system/source/misc/: MISCServiceProxy.cpp
tests/: CMakeLists.txt
tests/integration/: EventsServiceStubProxyTest.cpp
tests/lib/googlemock/: CMakeLists.txt
tests/lib/googlemock/include/gmock/: gmock-actions.h
tests/lib/googlemock/test/: gmock_all_test.cc  gmock_test_utils.py
tests/lib/googletest/include/gtest/: gtest-death-test.h  gtest-message.h  gtest.h
tests/lib/googletest/include/gtest/internal/: gtest-filepath.h  gtest-port.h
tests/lib/googletest/samples/: sample5_unittest.cc
tests/lib/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
tests/lib/googletest/test/: googletest-death-test-test.cc  googletest-output-test.py  gtest_test_macro_stack_footprint_test.cc  gtest_test_utils.py
tests/system/: EventServiceGotAIEvent.cpp  EventServiceGotRecordingEvent.cpp
